--- a/Day 24-25/Hands-On Model Evaluation and Cross Validation.ipynb
+++ b/Day 24-25/Hands-On Model Evaluation and Cross Validation.ipynb
@@ -399,7 +399,7 @@
    "id": "bde30186",
    "metadata": {},
    "source": [
-    "1. K-Fold Cross-Validation:\n",
+    "**1. K-Fold Cross-Validation:**\n",
     "\n",
     "In K-Fold cross-validation, the dataset is split into K equal-sized folds. Each fold will be used as a test set once, while the rest are used for training."
    ]
@@ -457,7 +457,7 @@
    "id": "ddc749d9",
    "metadata": {},
    "source": [
-    "2. Leave-One-Out Cross-Validation (LOO):\n",
+    "**2. Leave-One-Out Cross-Validation (LOO):**\n",
     "\n",
     "Leave-One-Out Cross-Validation involves using one data point as a test set and the rest as a training set. This is repeated for each data point."
    ]
@@ -520,14 +520,14 @@
    "id": "626e31f8",
    "metadata": {},
    "source": [
-    "3. Stratified K-Fold Cross-Validation:\n",
+    "**3. Stratified K-Fold Cross-Validation:**\n",
     "\n",
     "Stratified K-Fold ensures that each fold has approximately the same percentage of samples of each target class. This is particularly useful when the target classes are imbalanced."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "addeec27",
    "metadata": {},
    "outputs": [
@@ -570,7 +570,7 @@
     "print(f\"Accuracy: {sum(accuracies) / len(accuracies):.2f}\")\n",
     "print(f\"Precision: {sum(precisions) / len(precisions):.2f}\")\n",
     "print(f\"Recall: {sum(recalls) / len(recalls):.2f}\")\n",
-    "print(f\"F1-Score: {sum(f1_scores) / len(f1_scores):.2f}\")\n"
+    "print(f\"F1-Score: {sum(f1_scores) / len(f1_scores):.2f}\")"
    ]
   },
   {
