--- a/Day 24-25 (Optional Project)/Customer Churn Prediction Model Refinement Challenge.ipynb
+++ b/Day 24-25 (Optional Project)/Customer Churn Prediction Model Refinement Challenge.ipynb
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "4e53d008",
    "metadata": {},
    "outputs": [],
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "8ca0f3ea",
    "metadata": {},
    "outputs": [
@@ -246,7 +246,7 @@
        "      <td>Electronic check</td>\n",
        "      <td>29.85</td>\n",
        "      <td>29.85</td>\n",
-       "      <td>0</td>\n",
+       "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -269,8 +269,8 @@
        "      <td>No</td>\n",
        "      <td>Mailed check</td>\n",
        "      <td>56.95</td>\n",
-       "      <td>1889.50</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1889.5</td>\n",
+       "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -294,7 +294,7 @@
        "      <td>Mailed check</td>\n",
        "      <td>53.85</td>\n",
        "      <td>108.15</td>\n",
-       "      <td>1</td>\n",
+       "      <td>Yes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -318,7 +318,7 @@
        "      <td>Bank transfer (automatic)</td>\n",
        "      <td>42.30</td>\n",
        "      <td>1840.75</td>\n",
-       "      <td>0</td>\n",
+       "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -342,7 +342,7 @@
        "      <td>Electronic check</td>\n",
        "      <td>70.70</td>\n",
        "      <td>151.65</td>\n",
-       "      <td>1</td>\n",
+       "      <td>Yes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -389,8 +389,8 @@
        "      <td>Yes</td>\n",
        "      <td>Mailed check</td>\n",
        "      <td>84.80</td>\n",
-       "      <td>1990.50</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1990.5</td>\n",
+       "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7039</th>\n",
@@ -413,8 +413,8 @@
        "      <td>Yes</td>\n",
        "      <td>Credit card (automatic)</td>\n",
        "      <td>103.20</td>\n",
-       "      <td>7362.90</td>\n",
-       "      <td>0</td>\n",
+       "      <td>7362.9</td>\n",
+       "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7040</th>\n",
@@ -438,7 +438,7 @@
        "      <td>Electronic check</td>\n",
        "      <td>29.60</td>\n",
        "      <td>346.45</td>\n",
-       "      <td>0</td>\n",
+       "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7041</th>\n",
@@ -461,8 +461,8 @@
        "      <td>Yes</td>\n",
        "      <td>Mailed check</td>\n",
        "      <td>74.40</td>\n",
-       "      <td>306.60</td>\n",
-       "      <td>1</td>\n",
+       "      <td>306.6</td>\n",
+       "      <td>Yes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7042</th>\n",
@@ -485,8 +485,8 @@
        "      <td>Yes</td>\n",
        "      <td>Bank transfer (automatic)</td>\n",
        "      <td>105.65</td>\n",
-       "      <td>6844.50</td>\n",
-       "      <td>0</td>\n",
+       "      <td>6844.5</td>\n",
+       "      <td>No</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -535,34 +535,34 @@
        "\n",
        "     PaperlessBilling              PaymentMethod MonthlyCharges  TotalCharges  \\\n",
        "0                 Yes           Electronic check          29.85         29.85   \n",
-       "1                  No               Mailed check          56.95       1889.50   \n",
+       "1                  No               Mailed check          56.95        1889.5   \n",
        "2                 Yes               Mailed check          53.85        108.15   \n",
        "3                  No  Bank transfer (automatic)          42.30       1840.75   \n",
        "4                 Yes           Electronic check          70.70        151.65   \n",
        "...               ...                        ...            ...           ...   \n",
-       "7038              Yes               Mailed check          84.80       1990.50   \n",
-       "7039              Yes    Credit card (automatic)         103.20       7362.90   \n",
+       "7038              Yes               Mailed check          84.80        1990.5   \n",
+       "7039              Yes    Credit card (automatic)         103.20        7362.9   \n",
        "7040              Yes           Electronic check          29.60        346.45   \n",
-       "7041              Yes               Mailed check          74.40        306.60   \n",
-       "7042              Yes  Bank transfer (automatic)         105.65       6844.50   \n",
+       "7041              Yes               Mailed check          74.40         306.6   \n",
+       "7042              Yes  Bank transfer (automatic)         105.65        6844.5   \n",
        "\n",
-       "      Churn  \n",
-       "0         0  \n",
-       "1         0  \n",
-       "2         1  \n",
-       "3         0  \n",
-       "4         1  \n",
-       "...     ...  \n",
-       "7038      0  \n",
-       "7039      0  \n",
-       "7040      0  \n",
-       "7041      1  \n",
-       "7042      0  \n",
+       "     Churn  \n",
+       "0       No  \n",
+       "1       No  \n",
+       "2      Yes  \n",
+       "3       No  \n",
+       "4      Yes  \n",
+       "...    ...  \n",
+       "7038    No  \n",
+       "7039    No  \n",
+       "7040    No  \n",
+       "7041   Yes  \n",
+       "7042    No  \n",
        "\n",
        "[7043 rows x 21 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
