--- a/Day 32 - 33/NLP with python.ipynb
+++ b/Day 32 - 33/NLP with python.ipynb
@@ -540,7 +540,7 @@
     "    \"This movie was awful\"\n",
     "]\n",
     "\n",
-    "for sentence in test_sentences:\n",
+    "for sentence in test_sentences: \n",
     "    doc = nlp(sentence)\n",
     "    print(f\"Sentence: '{sentence}' => Predicted Sentiment: {'positive' if doc.cats['pos'] > doc.cats['neg'] else 'negative'}\")\n"
    ]
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "id": "9997e411",
    "metadata": {},
    "outputs": [],
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "id": "ca699b78",
    "metadata": {},
    "outputs": [
@@ -633,13 +633,12 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package movie_reviews to\n",
-      "[nltk_data]     C:\\Users\\devid\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]     C:\\Users\\devid/nltk_data...\n",
       "[nltk_data]   Package movie_reviews is already up-to-date!\n",
       "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     C:\\Users\\devid\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]     C:\\Users\\devid/nltk_data...\n",
       "[nltk_data]   Package stopwords is already up-to-date!\n",
-      "[nltk_data] Downloading package punkt to\n",
-      "[nltk_data]     C:\\Users\\devid\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data] Downloading package punkt to C:\\Users\\devid/nltk_data...\n",
       "[nltk_data]   Package punkt is already up-to-date!\n"
      ]
     },
@@ -649,7 +648,7 @@
        "True"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -663,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "id": "8b18ae6a",
    "metadata": {},
    "outputs": [],
@@ -689,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "id": "4220815c",
    "metadata": {},
    "outputs": [
@@ -740,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "id": "097b83fc",
    "metadata": {},
    "outputs": [],
@@ -756,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 8,
    "id": "cf6e5520",
    "metadata": {},
    "outputs": [],
@@ -770,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
    "id": "8ff52033",
    "metadata": {},
    "outputs": [],
@@ -796,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "id": "5387bc1c",
    "metadata": {},
    "outputs": [],
@@ -808,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "id": "4b455851",
    "metadata": {},
    "outputs": [],
@@ -828,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "id": "08e9c7e1",
    "metadata": {},
    "outputs": [
@@ -847,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 15,
    "id": "ec4e5c79",
    "metadata": {},
    "outputs": [
@@ -861,7 +860,7 @@
    ],
    "source": [
     "# Test with New Data\n",
-    "test_review = \"This movie was absolutely amazing, with great performances and a captivating story.\"\n",
+    "test_review = \"This movie was absolutely great, with great performances and a good story.\"\n",
     "test_tokens = nltk.word_tokenize(test_review)\n",
     "test_words = [word.lower() for word in test_tokens if word.isalpha() and word.lower() not in stop_words]\n",
     "test_features = document_features(test_words)\n",
@@ -870,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 14,
    "id": "c2f81b1f",
    "metadata": {},
    "outputs": [
@@ -1095,7 +1094,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "testenv",
    "language": "python",
    "name": "python3"
   },
@@ -1109,7 +1108,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
