--- a/Day 34 - 35/Text preprocessing revisit.ipynb
+++ b/Day 34 - 35/Text preprocessing revisit.ipynb
@@ -420,8 +420,11 @@
    "metadata": {},
    "source": [
     "- `re.sub(r'\\d+', '', text)` is using Python's `re` (regular expression) module to remove all numerical digits from the given string text.\n",
+    "\n",
     "- `re.sub()`: This function is used to search for a pattern (defined by a regular expression) in a string and replace it with another string. It has the following syntax:\n",
-    "`re.sub(pattern, replacement, string)\n",
+    "\n",
+    "    `re.sub(pattern, replacement, string)`\n",
+    "\n",
     "- `r'\\d+'`: This is the regular expression pattern used to find numbers in the text.\n",
     "\n",
     "`\\d` represents any digit (equivalent to [0-9]).\n",
