--- a/Day 32 - 33/NLP with python.ipynb
+++ b/Day 32 - 33/NLP with python.ipynb
@@ -240,12 +240,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "906dd8dc",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "id": "183d90d6",
    "metadata": {},
    "source": [
@@ -426,140 +420,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 34,
+   "cell_type": "markdown",
    "id": "c4f25344",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#pip install spacy"
+    "Refer to the notebook spaCy.ipynb"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "875bead5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import spacy\n",
-    "from spacy.pipeline.textcat import Config, ConfigSchema, TextCategorizer\n",
-    "from spacy.training.example import Example"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "02c35f10",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load SpaCy's pre-trained English model\n",
-    "nlp = spacy.load('en_core_web_sm')\n",
-    "\n",
-    "# Step 1: Create the text classifier component\n",
-    "text_cat = nlp.create_pipe('textcat', config={\"exclusive_classes\": True, \"architecture\": \"simple_cnn\"})\n",
-    "nlp.add_pipe(text_cat, last=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4e59c95f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Add labels (positive and negative)\n",
-    "text_cat.add_label(\"pos\")\n",
-    "text_cat.add_label(\"neg\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0c65d3a6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Step 2: Prepare the training data\n",
-    "# The data format is [(text, label), where label is 'pos' or 'neg']\n",
-    "training_data = [\n",
-    "    (\"I love this movie\", {\"cats\": {\"pos\": 1, \"neg\": 0}}),\n",
-    "    (\"This film is amazing\", {\"cats\": {\"pos\": 1, \"neg\": 0}}),\n",
-    "    (\"I hated this movie\", {\"cats\": {\"pos\": 0, \"neg\": 1}}),\n",
-    "    (\"This film is terrible\", {\"cats\": {\"pos\": 0, \"neg\": 1}})\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "92773844",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Convert training data to SpaCy's format\n",
-    "train_examples = []\n",
-    "for text, annot in training_data:\n",
-    "    doc = nlp.make_doc(text)\n",
-    "    example = Example.from_dict(doc, annot)\n",
-    "    train_examples.append(example)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c715bc2d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Step 3: Train the classifier\n",
-    "optimizer = nlp.begin_training()\n",
-    "for epoch in range(10):  # 10 epochs for training\n",
-    "    losses = {}\n",
-    "    # Shuffle and batch the examples\n",
-    "    # Example usage of batching (make sure you shuffle the training data)\n",
-    "    # this is a simple approach with no batch strategy.\n",
-    "    for batch in spacy.util.minibatch(train_examples, size=2):  \n",
-    "        nlp.update(batch, losses=losses)\n",
-    "    print(f\"Epoch {epoch} Losses: {losses}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c81bb53e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    " \n",
-    "\n",
-    "# Step 4: Test the classifier on new sentences\n",
-    "test_sentences = [\n",
-    "    \"I really enjoyed this movie\",\n",
-    "    \"This movie was awful\"\n",
-    "]\n",
-    "\n",
-    "for sentence in test_sentences: \n",
-    "    doc = nlp(sentence)\n",
-    "    print(f\"Sentence: '{sentence}' => Predicted Sentiment: {'positive' if doc.cats['pos'] > doc.cats['neg'] else 'negative'}\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "346f6ada",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8beb6a10",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -914,12 +780,6 @@
    "source": [
     "Association (e.g., \"neg : pos = 8.6 : 1.0\"): This shows how strongly the word is linked to one class. For example, \"chick\" is 8.6 times more likely to appear in negative reviews than positive ones."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "933e060c",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
