--- a/Day 32 - 33/spaCy (incomplete).ipynb
+++ b/Day 32 - 33/spaCy (incomplete).ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "<div style=\"background-color: #add8e6; padding: 10px; height: 70px; border-radius: 15px;\">\n",
-    "    <div style=\"font-family: 'Georgia', serif; font-size: 20px; padding: 10px; text-align: right; position: absolute; right: 50px;\">\n",
+    "    <div style=\"font-family: 'Georgia', serif; font-size: 20px; padding: 10px; text-align: right; position: absolute; right: 20px;\">\n",
     "        Mohammad Idrees Bhat <br>\n",
     "        <span style=\"font-family: 'Arial', sans-serif;font-size: 12px; color: #0a0a0a;\">Tech Skills Trainer | AI/ML Consultant</span> <!--- Mohammad Idrees Bhat | Tech Skills Trainer | AI/ML Consultant --->\n",
     "    </div>\n",
@@ -26,11 +26,23 @@
    "id": "151ad3d8-0bce-4e29-86da-5ea91b5a69df",
    "metadata": {},
    "source": [
-    "<div style=\"background-color: #002147; padding: 10px; text-align: center; color: white; font-size: 32px; font-family: 'Arial', sans-serif; border-radius: 100px;\">\n",
-    "    IMDB Reviews <br>\n",
-    "    <h3 style=\"text-align: center; color: white; font-size: 15px; font-family: 'Arial', sans-serif;\">  Scraping & Cleaning the movie \n",
-    "ratings</h3>\n",
-    "</div\n"
+    "<div style=\"background-color: #002147; padding: 10px; text-align: center; color: white; font-size: 32px; font-family: 'Arial', sans-serif;\">\n",
+    "SpaCy <br>\n",
+    "    <h3 style=\"text-align: center; color: white; font-size: 15px; font-family: 'Arial', sans-serif;\">SpaCy for text classification</h3>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "155e8ec7-547b-41f4-b6f6-6e6e719c198c",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color: white; color: black; padding: 10px;\">\n",
+    "    <h4><b>AGENDA</b> <p><p>\n",
+    "1.  Introduction to spaCy <p>\n",
+    "2.  Installing spaCY <p> \n",
+    "3.  Text classification in spaCy\n",
+    "</h4> </div>"
    ]
   },
   {
@@ -42,13 +54,25 @@
     "<link href=\"https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap\" rel=\"stylesheet\">\n",
     "\n",
     "<!-- Main div with centered content and a flexible box size, no scroll bar -->\n",
-    "<div style=\"background-color: #baf733; min-height: 100%; width: 100%; display: flex; justify-content: center; align-items: center; position: relative; padding: 20px; box-sizing: border-box; font-family: 'Montserrat', sans-serif; font-weight: 700; font-size: 20px; border-radius: 15px;\">\n",
+    "<div style=\"background-color: #baf733; min-height: 100px; width: 100%; display: flex; justify-content: center; align-items: center; position: relative; padding: 20px; box-sizing: border-box; font-family: 'Montserrat', sans-serif; font-weight: 700; font-size: 20px; border-radius: 15px;\">\n",
     "    <div style=\"position: absolute; top: 10px; right: 10px; padding: 5px 10px; font-size: 14px; color: rgba(0, 0, 0, 0.05); border-radius: 10px;\">Mohammad Idrees Bhat</div>\n",
     "    <!-- Fill the below text with question -->\n",
     "    <!-- Fill the below text with question -->\n",
+    "    “You were born with wings, why prefer to crawl through life?”<br>\n",
+    "    - Rumi\n",
     "    <!-- Fill the above text with question -->\n",
     "    <!-- Fill the above text with question -->\n",
+    "\n",
     "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62fb68d6",
+   "metadata": {},
+   "source": [
+    "\n",
+    "What does this mean to you? How might AI interpret ‘wings’ literally and miss the deeper meaning?\n"
    ]
   },
   {
@@ -57,76 +81,99 @@
    "metadata": {},
    "source": [
     "<div style=\"background-color: lightgreen; color: black; padding: 4px;\">\n",
-    "    <h3> PROJECT DESCRIPTION \n",
+    "    <h3>1.spaCy\n",
     "</h3> </div>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9a9a0a74-0cc3-4ae6-bda6-0a4fee696267",
+   "id": "5e4e5c11",
    "metadata": {},
    "source": [
-    "Scrape movie reviews from IMDB and clean data to prepare it for analysis. Students will use web scrapping tools and data cleaning techniques to create a high quality database ready for futher analysis."
+    "- **SpaCy:**\n",
+    "  - Built for production-level tasks and focuses on efficiency and performance. It is optimized for industrial use cases, handling large-scale data and real-time NLP applications.\n",
+    "  - Known for its speed and efficiency.\n",
+    "  - For advanced preprocessing like lemmatization, POS tagging, dependency parsing, named entity recognition (NER), and word embeddings.\n",
+    "  "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5f2800db-e384-470c-9c9e-ded21e2c4ded",
+   "id": "017923d2",
+   "metadata": {},
+   "source": [
+    "- [spaCy 101](https://spacy.io/usage/spacy-101) A brief introduction\n",
+    "- [spaCy Course](https://course.spacy.io/en/) Advanced NLP with spaCy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea591cf7",
+   "metadata": {},
+   "source": [
+    "Text Classification with SpaCy\n",
+    "\n",
+    "1. **Load SpaCy and process text.**\n",
+    "2. **Extract linguistic features (POS, entities, etc.).**\n",
+    "3. **Train a classifier using features.**\n",
+    "4. **Evaluate the classifier.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd00b88e",
    "metadata": {},
    "source": [
     "<div style=\"background-color: lightgreen; color: black; padding: 4px;\">\n",
-    "    <h3> PROJECT DELIVERABLES\n",
-    "</h3> </div>"
+    "    <h3>2. Installing SpaCy\n",
+    "    </h3> </div>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f7e91682-272f-4380-89f9-25897439e77f",
+   "id": "c4f25344",
    "metadata": {},
    "source": [
-    "    1. Cleaned dataset\n",
-    "    2. Jupyter notebook with code and documentation\n",
-    "    3. Report on data acquisition and cleaning processess"
+    "Go to terminal, add a commmand prompt terminal, and use the following commands:\n",
+    "\n",
+    "```python \n",
+    "python -m venv .env # creates environment named .env\n",
+    ".env\\Scripts\\activate # activates the environment\n",
+    "pip install -U pip setuptools wheel # update pip tools\n",
+    "pip install -U spacy # install spacy\n",
+    "python -m spacy download en_core_web_sm # \n",
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b8cb6dbf-8d7c-4d7b-9862-ee945c270263",
+   "id": "a33ab8f6",
+   "metadata": {},
+   "source": [
+    "Check whether all dependencies are working:\n",
+    "\n",
+    "``python -m spacy validate``"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "d0e9d2c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import spacy\n",
+    "nlp = spacy.load(\"en_core_web_sm\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db3c1ac2",
    "metadata": {},
    "source": [
     "<div style=\"background-color: lightgreen; color: black; padding: 4px;\">\n",
-    "    <h3> FURTHER INSTRUCTIONS\n",
-    "</h3> </div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "146b6c1b-15ff-45bd-9643-790cbc3d958a",
-   "metadata": {},
-   "source": [
-    "### IMDb Movie Reviews Project Instructions:\n",
-    "\n",
-    "1. **Web Scraping:**\n",
-    "   - Use a web scraping tool (like BeautifulSoup or Scrapy) to extract IMDb movie reviews.\n",
-    "   - Ensure you gather relevant fields (e.g., review, name, date).\n",
-    "   (Choose the relevant fields based on your descretion)\n",
-    "\n",
-    "2. **Data Cleaning:**\n",
-    "   - Remove irrelevant data, empty reviews, and duplicates.\n",
-    "   - Handle missing data appropriately\n",
-    "\n",
-    "3. **Data Transformation:** (Optional/Advanced)\n",
-    "   - Convert all text to lowercase.\n",
-    "   - Optionally, perform text tokenization or stemming for future analysis.\n",
-    "\n",
-    "4. **Prepare Data for Analysis:**\n",
-    "   - Store cleaned data in a structured format (CSV).\n",
-    "   - Create a Jupyter notebook documenting your process with code, explanations, and necessary visualizations.\n",
-    "\n",
-    "5. **Report:**\n",
-    "   - Summarize the steps taken in data acquisition, cleaning, and transformation.\n",
-    "\n",
-    "Students can use the IMDb website for reviews: [IMDb Movie Reviews](https://www.imdb.com)\n"
+    "    <h3>3. Text Classification with SpaCy\n",
+    "    </h3> </div>"
    ]
   },
   {
@@ -135,7 +182,7 @@
    "metadata": {},
    "source": [
     "<div style=\"background-color: lightblue; color: white; padding: 10px; text-align: center;\">\n",
-    "    <h1>____________________         BEST OF LUCK   ...  :)        _____________________\n",
+    "    <h1>_________________________________END________________________________\n",
     "        <!--- Mohammad Idrees Bhat | Tech Skills Trainer | AI/ML Consultant --->\n",
     "</h1> </div>"
    ]
@@ -183,7 +230,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "spacyenv",
    "language": "python",
    "name": "python3"
   },
@@ -197,7 +244,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
