--- a/Projects (Capstone)/Customer Churn Prediction for T-Mobile (Compulsory).ipynb
+++ b/Projects (Capstone)/Customer Churn Prediction for T-Mobile (Compulsory).ipynb
@@ -105,6 +105,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "121606b4",
+   "metadata": {},
+   "source": [
+    "### **Duration - 2 Weeks - 40 hours**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b69ed7ea-1940-434d-bb2d-601d07994783",
    "metadata": {},
    "source": [
