--- a/Projects (Capstone)/Customer Churn Prediction for T-Mobile (Compulsory).ipynb
+++ b/Projects (Capstone)/Customer Churn Prediction for T-Mobile (Compulsory).ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "source": [
     "<div style=\"background-color: #002147; padding: 10px; text-align: center; color: white; font-size: 32px; font-family: 'Arial', sans-serif;\">\n",
-    "    Capstone Project 1:<br>\n",
+    "    Capstone Project 1: (Compulsory)<br>\n",
     "    <h3 style=\"text-align: center; color: white; font-size: 24px; font-family: 'Arial', sans-serif;\"> Customer Churn Prediction for\n",
     " T-Mobile</h3>\n",
     "</div>"
